Bug fixes
